update env, package.json, redis, azure store

--- a/api/.env.example
+++ b/api/.env.example
@@ -5,7 +5,7 @@
 # ==============================
 # Storage Configuration (REQUIRED - choose one)
 # ==============================
-EMULATED=false # Set to 'true' to use the local emulator
+EMULATED=true # Set to 'true' to use the local emulator
 
 # --- Azure Storage Configuration ---
 AZURE_STORAGE_ACCOUNT=    # Azure storage account name
@@ -14,15 +14,15 @@ AZURE_STORAGE_ACCESS_KEY= # Azure storage access key (if KeyVault not used)
 # ==============================
 # Server Configuration (REQUIRED)
 # ==============================
-SERVER_URL=http://localhost:3000 # The URL of your server
+SERVER_URL=<your_domain:8443> # The URL of your server
 
 # ==============================
 # Authentication (REQUIRED - at least one provider)
 # ==============================
 
 # --- GitHub OAuth ---
-GITHUB_CLIENT_ID=     # GitHub OAuth client ID
-GITHUB_CLIENT_SECRET= # GitHub OAuth client secret
+GITHUB_CLIENT_ID=<your_github_client_id>
+GITHUB_CLIENT_SECRET=<your_github_client_secret>
 
 # --- Microsoft OAuth ---
 MICROSOFT_CLIENT_ID=     # Microsoft OAuth client ID
@@ -33,7 +33,7 @@ MICROSOFT_CLIENT_SECRET= # Microsoft OAuth client secret
 # ==============================
 
 # --- HTTPS Configuration ---
-HTTPS= # Set to 'true' to enable HTTPS for local deployment
+HTTPS=true # Set to 'true' to enable HTTPS for local deployment
 
 # --- Debugging Configuration ---
 LOGGING=false            # Enable CodePush-specific logging
@@ -43,9 +43,12 @@ DEBUG_USER_ID=           # Backend user ID for debugging session
 # ==============================
 # Redis Configuration
 # ==============================
-REDIS_HOST=     # Redis server IP address
-REDIS_PORT=6379 # Redis port (default: 6379)
-REDIS_KEY=      # Redis authentication key
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASS=<your_password>
+REDIS_CRT=/etc/redis/tls/client.crt
+REDIS_KEY=/etc/redis/tls/client.key
+REDIS_CA_CRT=/etc/redis/tls/ca.crt
 
 # ==============================
 # Unit Testing Configuration
